# DuckAPI

./: .gitignore  README.md  pyproject.toml
duckapi/: app.py  database.py  models.py  schemas.py  service.py
duckfront/: package-lock.json  package.json
duckfront/src/: App.tsx  api.ts
terraform/: .terraform.lock.hcl  main.tf  output.tf  ssh.sh  user-data.sh
terraform/aws/: az.tf  ec2.tf  elb_ec2.tf
terraform/aws/api_gateway/: main.tf
terraform/aws/api_gateway/hello-world/: hello.js
terraform/examples/p3/: outputs.tf  rds.tf  variables.tf
terraform/plateform_2/: .terraform.lock.hcl  keys.tf  main.tf  outputs.tf  postgres.tf  variables.tf  versions.tf
terraform/plateform_2/backend/: compute.tf  load_balancers.tf  network.tf  outputs.tf  scaling.tf  variables.tf
terraform/plateform_2/database/: compute.tf  network.tf  outputs.tf  variables.tf
terraform/plateform_2/frontend/: compute.tf  load_balancers.tf  network.tf  outputs.tf  scaling.tf  variables.tf
terraform/plateform_2/user_data/: backend.tpl  frontend.tpl  mongo.sh
terraform/plateform_3/: api_gateway.tf  dynamo.tf  front.tf  gateway.tf  iam.tf  lambda.tf  main.tf  output.tf  versions.tf
terraform/plateform_3/lambda/: cors.py  create_duck.py  delete_duck.py  get_all_ducks.py  get_duck_by_uuid.py  update_duck.py
terraform/plateform_3/modules/duck_lambda/: main.tf  outputs.tf  variables.tf
