[tool.poetry]
name = "duckapi"
version = "0.1.0"
description = ""
authors = ["Tony Heng <tony.heng@epita.fr>", "Gabriel Rayzal <gabriel.rayzal@epita.fr>", "Gabriel Bouhnik <gabriel.bouhnik@epita.fr>", "Yanis Chaabane <yanis.chaabane@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.43"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
